[tool.poetry]
name = "flive"
version = "0.1.0"
description = ""
authors = ["Adrian Schneider <adrian.schneider@sangl.com>"]
readme = "README.md"
packages = [
    { include = "flive", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.8"
pydantic = "^2.8.2"
wrapt = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
