[tool.poetry]
name = "flive"
version = "0.1.0"
description = ""
authors = ["Adrian Schneider <adrian.schneider@sangl.com>"]
readme = "README.md"
packages = [{ include = "flive", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
wrapt = "^1.16.0"
redis = "^5.0.8"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
asyncpg = "^0.29.0"
aiorun = "^2024.5.1"
libcst = "^1.4.0"
uuid-utils = "^0.9.0"
aiosqlite = "^0.20.0"
tenacity = "^9.0.0"
xxhash = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["flive", "example"]
