[project]
name = "flive"
version = "0.1.0"
description = ""
authors = [{ name = "Adrian Schneider", email = "adrian.schneider@sangl.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "wrapt>=1.16.0",
    "redis>=5.0.8",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "aiorun>=2024.5.1",
    "libcst>=1.4.0",
    "uuid-utils>=0.9.0",
    "aiosqlite>=0.20.0",
    "tenacity>=9.0.0",
    "xxhash>=3.4.1",
    "loguru>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/*.py"]

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["flive", "example"]
